--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit
-moviepy
-SpeechRecognition
-transformers
-nltk
-pydub
-sentencepiece
+streamlit==1.14.0
+moviepy==1.0.3
+SpeechRecognition==3.8.1
+transformers==4.20.1
+nltk==3.7
+pydub==0.25.1
+sentencepiece==0.1.96
 tensorflow==2.11.0
-tf-keras
+tf-keras==0.1.0
